# song-of-the-week

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
common/: config_manager.py  logging.py
common/utils/: helper.py  io.py
configs/: lastfm.yaml  musicbrainz.yaml  project.yaml  spotify.yaml
core/cleaning/: cleaning_steps.py  pipeline.py
core/data/features/: y.csv
core/data/metrics/: logreg_final_metrics.json
core/datasets/: build_training_set.py
core/features/: aggregations.py  featurize.py
core/scripts/: build_dataset.py  build_weekly.py  clean_dataset.py  featurize.py  predict.py  train.py
data/curated/: album_info.csv  artist_info.csv
extraction/apis/: lastfm.py  musicbrainz.py  spotify.py
extraction/data/curated/: lastfm_albums.csv  lastfm_artists.csv  lastfm_tracks.csv  musicbrainz_artists.csv  spotify_favorites.csv  spotify_tracks.csv
extraction/pipelines/: lastfm_pipeline.py  musicbrainz_pipeline.py  spotify_pipeline.py
extraction/scripts/: extract_lastfm.py  extract_musicbrainz.py  extract_spotify.py
notebooks/: 00_eda.ipynb  01_model_training.ipynb
